# Copyright 2023 Salesforce, Inc. All rights reserved.
[package]
name = "mtls_cert"
version = "1.0.2"
rust-version = "1.83.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "99b00b4c-5e28-4d9a-a308-8bc0c4b00cfa"
definition_asset_id = "mtls-cert"
implementation_asset_id = "mtls-cert-flex"

[dependencies]
pdk = { version = "1.3.0", registry = "anypoint" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.3.0", registry = "anypoint" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
